# ztf-reference

./: .gitignore  CLAUDE.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  wait_postgres.py
app/ztf_reference/: main.py  pg_sphere.py  routes.py
ingest/: Dockerfile  cron-entrypoint.sh  pyproject.toml
ingest/ztf_reference_ingest/: __main__.py  db.py  discover.py  download.py  fits.py
sql/: Dockerfile
sql/docker-entrypoint-initdb.d/: 01-init-schema.sh
tests/: conftest.py  test_ingest.py  test_routes.py
tests/fixtures/: ztf_000202_zg_c10_q1_refpsfcat.fits
