[project]
name = "ztf-reference-ingest"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.1",
    "astropy>=6",
    "httpx>=0.27",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
